--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "type": "git",
     "url": "https://github.com/OpenATK/TheRockApp"
   },
-  "keywords": [
-  ],
+  "keywords": [],
   "contributors": [
     "Sam Noel <sanoel@purdue.edu>",
     "Jake Chung <chung78@purdue.edu>"
@@ -23,28 +22,24 @@
   },
   "dependencies": {
     "autoprefixer": "^6.3.3",
+    "axios": "^0.16.1",
     "baobab": "^2.3.3",
     "bluebird": "^3.4.0",
-    "cerebral": "^0.35.7",
-    "cerebral-addons": "^0.6.1",
-    "cerebral-model-baobab": "^0.4.9",
-    "cerebral-module-devtools": "^0.7.0",
-    "cerebral-module-forms": "^0.5.0",
-    "cerebral-module-router": "^0.16.1",
-    "cerebral-view-react": "^0.12.6",
+    "cerebral": "2.0.0-b-alpha.a54303bb",
+    "cerebral-router": "^0.9.2",
     "express": "^4.14.0",
     "file-loader": "^0.8.5",
     "font-awesome": "^4.6.3",
-    "leaflet": "^0.7.7",
-    "leaflet-draw": "^0.3.0",
-    "leaflet-omnivore": "^0.3.2",
+    "json-pointer": "^0.6.0",
+    "leaflet": "^1.0.3",
     "lodash": "^4.14.1",
     "md5": "^2.1.0",
     "pouchdb": "^5.4.0",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7",
+    "prop-types": "^15.5.8",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
     "react-fontawesome": "^1.1.0",
-    "react-leaflet": "^0.10.1",
+    "react-leaflet": "^1.1.6",
     "superagent": "^2.0.0",
     "superagent-promise": "^1.1.0",
     "url-loader": "^0.5.7",
