--- a/package.json
+++ b/package.json
@@ -1,63 +1,29 @@
 {
   "name": "TheRockApp",
-  "version": "0.0.1",
-  "description": "An app used to record the position of rocks in agricultural fields.",
-  "main": "app/main.js",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/OpenATK/TheRockApp"
-  },
-  "keywords": [],
-  "contributors": [
-    "Sam Noel <sanoel@purdue.edu>",
-    "Jake Chung <chung78@purdue.edu>"
-  ],
-  "license": "Apache-2.0",
-  "bugs": {
-    "url": "https://github.com/OpenATK/TheRockApp/issues"
-  },
-  "homepage": "https://github.com/OpenATK/TheRockApp",
-  "scripts": {
-    "start": "node server.js"
-  },
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "autoprefixer": "^6.3.3",
-    "axios": "^0.16.1",
-    "baobab": "^2.3.3",
-    "bluebird": "^3.4.0",
-    "cerebral": "2.0.0-b-alpha.a54303bb",
-    "cerebral-router": "^0.9.2",
-    "express": "^4.14.0",
-    "file-loader": "^0.8.5",
-    "font-awesome": "^4.6.3",
+    "babel-preset-react": "^6.24.1",
+    "bluebird": "^3.5.0",
+    "cerebral": "2.0.0-b-alpha.c00bd8f2",
     "json-pointer": "^0.6.0",
     "leaflet": "^1.0.3",
-    "lodash": "^4.14.1",
-    "md5": "^2.1.0",
-    "pouchdb": "^5.4.0",
+    "md5": "^2.2.1",
+    "pouchdb": "^6.2.0",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-fontawesome": "^1.1.0",
     "react-leaflet": "^1.1.6",
-    "superagent": "^2.0.0",
-    "superagent-promise": "^1.1.0",
-    "url-loader": "^0.5.7",
-    "uuid": "^2.0.1",
-    "webpack": "^1.13.2"
+    "superagent": "^3.5.2",
+    "superagent-promise": "^1.1.0"
   },
   "devDependencies": {
-    "babel-core": "^6.14.0",
-    "babel-loader": "^6.2.5",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-react-hmre": "^1.1.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "concurrently": "^2.0.0",
-    "cross-env": "^1.0.7",
-    "css-loader": "^0.23.1",
-    "postcss-loader": "^0.8.1",
-    "style-loader": "^0.13.0"
+    "react-scripts": "0.9.5"
+  },
+  "scripts": {
+    "start": "PORT=8000 react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
