--- a/package.json
+++ b/package.json
@@ -2,21 +2,33 @@
   "name": "TheRockApp",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://OpenATK.github.io/TheRockApp",
   "dependencies": {
     "@cerebral/react": "^3.1.1",
-    "babel-preset-react": "^6.24.1",
-    "bluebird": "*",
-    "cerebral": "*",
-    "leaflet": "*",
-    "md5": "^2.2.1",
-    "react": "*",
+    "@cerebral/storage": "^4.2.1",
+    "@material-ui/core": "^1.5.0",
+    "@material-ui/icons": "^2.0.2",
+    "@oada/cerebral-module": "0.9.0",
+    "@oada/cerebral-provider": "^1.9.15",
+    "axios": "^0.18.0",
+    "bluebird": "^3.5.1",
+    "cerebral": "^4.1.1",
+    "gh-pages": "^1.1.0",
+    "json-pointer": "^0.6.0",
+    "leaflet": "^1.3.1",
+    "lodash": "^4.17.5",
+    "npm": "^5.6.0",
+    "prop-types": "^15.6.0",
+    "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-leaflet": "*"
-  },
-  "devDependencies": {
-    "react-scripts": "0.9.5"
+    "react-leaflet": "^1.8.0",
+    "react-leaflet-div-icon": "^1.1.0",
+    "react-scripts": "1.1.0",
+    "uuid": "^3.2.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "PORT=8000 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
