--- a/package.json
+++ b/package.json
@@ -1,30 +1,29 @@
 {
   "name": "TheRockApp",
-  "version": "0.1.16",
+  "version": "0.1.25",
   "private": true,
   "homepage": "https://OpenATK.github.io/TheRockApp",
   "dependencies": {
     "@cerebral/react": "^3.1.1",
-    "@cerebral/storage": "^4.2.1",
     "@material-ui/core": "^1.5.0",
     "@material-ui/icons": "^2.0.2",
     "@oada/cerebral-module": "0.9.1",
     "@oada/cerebral-provider": "^1.9.16",
-    "axios": "^0.18.0",
     "bluebird": "^3.5.1",
     "cerebral": "^4.1.1",
     "gh-pages": "^1.1.0",
     "json-pointer": "^0.6.0",
     "leaflet": "^1.3.1",
     "lodash": "^4.17.5",
-    "npm": "^5.6.0",
+    "npm": "^6.4.0",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-leaflet": "^1.8.0",
     "react-leaflet-div-icon": "^1.1.0",
-    "react-scripts": "1.1.0",
-    "uuid": "^3.2.1"
+    "react-scripts": "1.1.4",
+    "uuid": "^3.2.1",
+    "webpack-sources": "^1.1.0"
   },
   "scripts": {
     "predeploy": "npm run build",
