--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://OpenATK.github.io/TheRockApp",
   "dependencies": {
     "@cerebral/react": "^3.1.1",
+    "@cerebral/storage": "^4.2.2",
     "@material-ui/core": "^1.5.0",
     "@material-ui/icons": "^2.0.2",
     "@oada/cerebral-module": "0.9.1",
